try to fix flash on iOS AGAIN

--- a/frontend/src/components/Background/Background.css
+++ b/frontend/src/components/Background/Background.css
@@ -11,4 +11,5 @@ video {
   background-size: cover;
   border-bottom: 1px solid transparent;
   transition: 1s opacity;
+  background-image: url("background.png")
 }
